--- a/app/nginx/config/nginx.conf
+++ b/app/nginx/config/nginx.conf
@@ -3,9 +3,9 @@
 upstream backend_servers {
     # simple round-robin (default)
     server fastapi01:8000;
-    server fastapi02:8000;
-    server fastapi03:8000;
-    server fastapi04:8000;
+    # server fastapi02:8000;
+    # server fastapi03:8000;
+    # server fastapi04:8000;
 
     # "least connections" strategy
     # least_conn;
