--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -61,23 +61,23 @@ services:
 
   fastapi01:
     container_name: fastapi01
-    image: 099139718958.dkr.ecr.ca-central-1.amazonaws.com/iot-mgnt-telemetry-fastapi:dev
+    # image: 099139718958.dkr.ecr.ca-central-1.amazonaws.com/iot-mgnt-telemetry-fastapi:dev
     # image: simonangelfong/demo-ecs-svc-fastapi
     # image: fastapi
-    # build:
-      # context: ./fastapi/
-      # dockerfile: Dockerfile
+    build:
+      context: ./fastapi/
+      dockerfile: Dockerfile
     environment:
       - ENV=dev
       - DEBUG=true
-      - POSTGRES_HOST=postgres
-      - POSTGRES_PORT=5432
-      - POSTGRES_APP_USER=app_user
-      - POSTGRES_APP_DB=app_db
-      - POSTGRES_APP_PASSWORD=postgres
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - REDIS_DB=0
+      - POSTGRES__HOST=postgres
+      - POSTGRES__PORT=5432
+      - POSTGRES__USER=app_user
+      - POSTGRES__DB=app_db
+      - POSTGRES__PASSWORD=postgres
+      - REDIS__HOST=redis
+      - REDIS__PORT=6379
+      - REDIS__DB=0
     networks:
       # - public_network
       - private_network
@@ -95,110 +95,110 @@ services:
           cpus: "1"
           memory: 256M
 
-  fastapi02:
-    container_name: fastapi02
-    # image: simonangelfong/demo-ecs-svc-fastapi
-    # image: fastapi
-    build:
-      context: ./fastapi/
-      dockerfile: Dockerfile
-    environment:
-      - ENV=dev
-      - DEBUG=true
-      - POSTGRES_HOST=postgres
-      - POSTGRES_PORT=5432
-      - POSTGRES_APP_USER=app_user
-      - POSTGRES_APP_DB=app_db
-      - POSTGRES_APP_PASSWORD=postgres
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - REDIS_DB=0
-    networks:
-      # - public_network
-      - private_network
-    ports:
-      - 8000:8000
-    depends_on:
-      - postgres
-      - redis
-    deploy:
-      resources:
-        limits:
-          cpus: "2"
-          memory: 512M
-        reservations:
-          cpus: "1"
-          memory: 256M
+  # fastapi02:
+  #   container_name: fastapi02
+  #   # image: simonangelfong/demo-ecs-svc-fastapi
+  #   # image: fastapi
+  #   build:
+  #     context: ./fastapi/
+  #     dockerfile: Dockerfile
+  #   environment:
+  #     - ENV=dev
+  #     - DEBUG=true
+  #     - POSTGRES_HOST=postgres
+  #     - POSTGRES_PORT=5432
+  #     - POSTGRES_APP_USER=app_user
+  #     - POSTGRES_APP_DB=app_db
+  #     - POSTGRES_APP_PASSWORD=postgres
+  #     - REDIS_HOST=redis
+  #     - REDIS_PORT=6379
+  #     - REDIS_DB=0
+  #   networks:
+  #     # - public_network
+  #     - private_network
+  #   ports:
+  #     - 8000:8000
+  #   depends_on:
+  #     - postgres
+  #     - redis
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         cpus: "2"
+  #         memory: 512M
+  #       reservations:
+  #         cpus: "1"
+  #         memory: 256M
 
-  fastapi03:
-    container_name: fastapi03
-    # image: simonangelfong/demo-ecs-svc-fastapi
-    # image: fastapi
-    build:
-      context: ./fastapi/
-      dockerfile: Dockerfile
-    environment:
-      - ENV=dev
-      - DEBUG=true
-      - POSTGRES_HOST=postgres
-      - POSTGRES_PORT=5432
-      - POSTGRES_APP_USER=app_user
-      - POSTGRES_APP_DB=app_db
-      - POSTGRES_APP_PASSWORD=postgres
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - REDIS_DB=0
-    networks:
-      # - public_network
-      - private_network
-    ports:
-      - 8000:8000
-    depends_on:
-      - postgres
-      - redis
-    deploy:
-      resources:
-        limits:
-          cpus: "2"
-          memory: 512M
-        reservations:
-          cpus: "1"
-          memory: 256M
+  # fastapi03:
+  #   container_name: fastapi03
+  #   # image: simonangelfong/demo-ecs-svc-fastapi
+  #   # image: fastapi
+  #   build:
+  #     context: ./fastapi/
+  #     dockerfile: Dockerfile
+  #   environment:
+  #     - ENV=dev
+  #     - DEBUG=true
+  #     - POSTGRES_HOST=postgres
+  #     - POSTGRES_PORT=5432
+  #     - POSTGRES_APP_USER=app_user
+  #     - POSTGRES_APP_DB=app_db
+  #     - POSTGRES_APP_PASSWORD=postgres
+  #     - REDIS_HOST=redis
+  #     - REDIS_PORT=6379
+  #     - REDIS_DB=0
+  #   networks:
+  #     # - public_network
+  #     - private_network
+  #   ports:
+  #     - 8000:8000
+  #   depends_on:
+  #     - postgres
+  #     - redis
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         cpus: "2"
+  #         memory: 512M
+  #       reservations:
+  #         cpus: "1"
+  #         memory: 256M
 
-  fastapi04:
-    container_name: fastapi04
-    # image: simonangelfong/demo-ecs-svc-fastapi
-    # image: fastapi
-    build:
-      context: ./fastapi/
-      dockerfile: Dockerfile
-    environment:
-      - ENV=dev
-      - DEBUG=true
-      - POSTGRES_HOST=postgres
-      - POSTGRES_PORT=5432
-      - POSTGRES_APP_USER=app_user
-      - POSTGRES_APP_DB=app_db
-      - POSTGRES_APP_PASSWORD=postgres
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - REDIS_DB=0
-    networks:
-      # - public_network
-      - private_network
-    ports:
-      - 8000:8000
-    depends_on:
-      - postgres
-      - redis
-    deploy:
-      resources:
-        limits:
-          cpus: "2"
-          memory: 512M
-        reservations:
-          cpus: "1"
-          memory: 256M
+  # fastapi04:
+  #   container_name: fastapi04
+  #   # image: simonangelfong/demo-ecs-svc-fastapi
+  #   # image: fastapi
+  #   build:
+  #     context: ./fastapi/
+  #     dockerfile: Dockerfile
+  #   environment:
+  #     - ENV=dev
+  #     - DEBUG=true
+  #     - POSTGRES_HOST=postgres
+  #     - POSTGRES_PORT=5432
+  #     - POSTGRES_APP_USER=app_user
+  #     - POSTGRES_APP_DB=app_db
+  #     - POSTGRES_APP_PASSWORD=postgres
+  #     - REDIS_HOST=redis
+  #     - REDIS_PORT=6379
+  #     - REDIS_DB=0
+  #   networks:
+  #     # - public_network
+  #     - private_network
+  #   ports:
+  #     - 8000:8000
+  #   depends_on:
+  #     - postgres
+  #     - redis
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         cpus: "2"
+  #         memory: 512M
+  #       reservations:
+  #         cpus: "1"
+  #         memory: 256M
   nginx:
     container_name: nginx
     image: nginx:latest
@@ -211,6 +211,6 @@ services:
       - "8080:8080"
     depends_on:
       - fastapi01
-      - fastapi02
-      - fastapi03
-      - fastapi04
+      # - fastapi02
+      # - fastapi03
+      # - fastapi04
