--- a/.github/workflows/feature-api-prod-deploy.yaml
+++ b/.github/workflows/feature-api-prod-deploy.yaml
@@ -12,6 +12,7 @@ permissions:
 
 jobs:
   ecr-push-fastapi:
+    name: Push Image to ECR - FastAPI(Prod)
     runs-on: ubuntu-latest
     environment: prod
     env:
@@ -24,11 +25,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Configure AWS Credentials
+      - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: ${{ secrets.AWS_TF_ROLE_ARN}}
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -53,6 +54,7 @@ jobs:
           tags: "${{ env.ECR_REPOSITORY }}:${{ vars.ENV }}"
 
       - name: Send email notification
+        if: failure()
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
@@ -77,6 +79,7 @@ jobs:
             <p><a href="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}">View Workflow Run</a></p>
 
   ecr-push-pgdb:
+    name: Push Image to ECR - Postgres(Prod)
     runs-on: ubuntu-latest
     environment: dev
     env:
@@ -89,11 +92,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Configure AWS Credentials
+      - name: Configure AWS credentials (OIDC)
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: ${{ secrets.AWS_TF_ROLE_ARN}}
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -118,6 +121,7 @@ jobs:
           tags: "${{ env.ECR_REPOSITORY }}:${{ vars.ENV }}"
 
       - name: Send email notification
+        if: failure()
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
@@ -140,3 +144,113 @@ jobs:
             <p><b>Workflow</b>: ${{ github.workflow }}</p>
             <p><b>Commit</b>: ${{ github.sha }}</p>
             <p><a href="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}">View Workflow Run</a></p>
+
+  # deploy:
+  #   name: Deploy(Prod)
+  #   needs: 
+  #     - ecr-push-fastapi
+  #     - ecr-push-pgdb
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 90
+  #   environment: prod
+  #   env:
+  #     TF_DIR: aws
+  #     TF_PLUGIN_CACHE_DIR: /home/runner/.terraform.d/plugin-cache
+  #     TF_VAR_aws_region: ${{ vars.AWS_REGION }}
+  #     TF_VAR_env: ${{ vars.ENV }}
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+
+  #     - name: Setup Terraform
+  #       uses: hashicorp/setup-terraform@v3
+  #       with:
+  #         terraform_version: ${{ vars.TF_VERSION }}
+
+  #     - name: Configure AWS credentials (OIDC)
+  #       uses: aws-actions/configure-aws-credentials@v4
+  #       with:
+  #         role-to-assume: ${{ secrets.AWS_TF_ROLE_ARN}}
+  #         aws-region: ${{ vars.AWS_REGION }}
+
+  #     - name: Configure Terraform plugin cache
+  #       run: |
+  #         mkdir -pv ${{ env.TF_PLUGIN_CACHE_DIR }}
+  #         echo 'plugin_cache_dir = "${{ env.TF_PLUGIN_CACHE_DIR }}"' > ~/.terraformrc
+
+  #     - name: Cache Terraform plugins
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: ${{ env.TF_PLUGIN_CACHE_DIR }}
+  #         key: ${{ runner.os }}-terraform-${{ vars.TF_VERSION }}
+
+  #     - name: Terraform init - S3 backend
+  #       working-directory: ${{ env.TF_DIR }}
+  #       run: |
+  #         terraform init -reconfigure -input=false \
+  #           -backend-config="bucket=${{ vars.AWS_BACKEND_BUCKET }}" \
+  #           -backend-config="region=${{ vars.AWS_REGION }}" \
+  #           -backend-config="key=${{ vars.PROJECT }}/${{vars.APP}}/${{ vars.ENV }}/terraform.tfstate" \
+  #           -backend-config="encrypt=true"
+
+  #     - name: Terraform Validate
+  #       working-directory: ${{ env.TF_DIR }}
+  #       run: |
+  #         terraform fmt -check -recursive -no-color
+  #         terraform validate -no-color
+
+  #     - name: Terraform Plan
+  #       working-directory: ${{ env.TF_DIR }}
+  #       id: plan
+  #       run: terraform plan -out=tfplan -input=false -no-color
+
+  #     - name: Show plan (JSON)
+  #       working-directory: ${{ env.TF_DIR }}
+  #       run: terraform show -json tfplan > tfplan.json
+
+  #     - name: Save plan artifacts
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: tfplan-bundle
+  #         path: |
+  #           ${{ env.TF_DIR }}/tfplan
+  #           ${{ env.TF_DIR }}/tfplan.json
+  #         retention-days: 3
+
+  #     - name: Terraform Apply
+  #       working-directory: ${{ env.TF_DIR }}
+  #       run: terraform apply -auto-approve -no-color tfplan
+
+  #     - name: Update kubeconfig
+  #       run: aws eks update-kubeconfig --region ${{ env.TF_VAR_aws_region}} --name ${{ env.KUBE_CLUSTER_NAME}}
+
+  #     # - name: Deploy to EKS
+  #     #   run: |
+  #     #     sed 's/-dev/-prod/' kube/04_fastapi.yaml
+  #     #     sed 's/-dev/-prod/' kube/05_nginx.yaml
+  #     #     kubectl replace --force -f ${{ env.KUBE_DIR }}
+
+  #     - name: Send email notification
+  #       if: always()
+  #       uses: dawidd6/action-send-mail@v3
+  #       with:
+  #         server_address: smtp.gmail.com
+  #         server_port: 465
+  #         secure: true
+  #         username: ${{ secrets.EMAIL_USERNAME }}
+  #         password: ${{ secrets.EMAIL_PASSWORD }}
+  #         subject: "${{ job.status }} - ${{ github.workflow }}: ${{ vars.PROJECT}} ${{vars.APP}} (${{vars.ENV}})"
+  #         to: ${{ secrets.EMAIL_USERNAME }}
+  #         from: ${{ secrets.EMAIL_USERNAME }}
+  #         html_body: |
+  #           <h2>GitHub Actions CI/CD Notification</h2>
+  #           <p><b>Project</b>: ${{ vars.PROJECT}}</p>
+  #           <p><b>Application</b>: ${{ vars.APP}}</p>
+  #           <p><b>Repository</b>: ${{ github.repository }}</p>
+  #           <p><b>Env</b>: ${{ vars.ENV }}</p>
+  #           <p><b>Job</b>: ${{ github.job }}</p>
+  #           <p><b>Status</b>: ${{ job.status }}</p>
+  #           <p><b>Branch</b>: ${{ github.ref }}</p>
+  #           <p><b>Workflow</b>: ${{ github.workflow }}</p>
+  #           <p><b>Commit</b>: ${{ github.sha }}</p>
+  #           <p><a href="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}">View Workflow Run</a></p>
