--- a/.github/workflows/feature-api-dev.yaml
+++ b/.github/workflows/feature-api-dev.yaml
@@ -157,7 +157,7 @@ jobs:
     env:
       AWS_REGION: ${{ vars.AWS_REGION }}
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
-      DIR_DOCKFILE: app/pgdb
+      DIR_DOCKFILE: app/redis
       ECR_REPOSITORY: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ vars.AWS_REGION }}.amazonaws.com/${{ vars.PROJECT }}-${{vars.APP}}-redis"
 
     steps:
