--- a/.github/workflows/feature-api-prod-deploy.yaml
+++ b/.github/workflows/feature-api-prod-deploy.yaml
@@ -318,16 +318,16 @@ jobs:
           terraform fmt -check -recursive -no-color
           terraform validate -no-color
 
-      - name: Terraform Plan
+      - name: Deploy - Terraform Plan
         working-directory: ${{ env.TF_DIR }}
-        id: plan
+        id: deploy-plan
         run: terraform plan -out=tfplan -input=false -no-color
 
-      - name: Show plan (JSON)
+      - name: Deploy - Show plan (JSON)
         working-directory: ${{ env.TF_DIR }}
         run: terraform show -json tfplan > tfplan.json
 
-      - name: Save plan artifacts
+      - name: Deploy - Save plan artifacts
         uses: actions/upload-artifact@v4
         with:
           name: tfplan-bundle
@@ -336,7 +336,7 @@ jobs:
             ${{ env.TF_DIR }}/tfplan.json
           retention-days: 3
 
-      - name: Terraform Apply
+      - name: Deploy - Terraform Apply
         working-directory: ${{ env.TF_DIR }}
         run: terraform apply -auto-approve -no-color tfplan
 
@@ -416,81 +416,81 @@ jobs:
         with:
           terraform_version: ${{ vars.TF_VERSION }}
 
-      # - name: Configure AWS credentials (OIDC)
-      #   uses: aws-actions/configure-aws-credentials@v4
-      #   with:
-      #     role-to-assume: ${{ secrets.AWS_TF_ROLE_ARN}}
-      #     aws-region: ${{ vars.AWS_REGION }}
+      - name: Configure AWS credentials (OIDC)
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_TF_ROLE_ARN}}
+          aws-region: ${{ vars.AWS_REGION }}
 
-      # - name: Configure Terraform plugin cache
-      #   run: |
-      #     mkdir -pv ${{ env.TF_PLUGIN_CACHE_DIR }}
-      #     echo 'plugin_cache_dir = "${{ env.TF_PLUGIN_CACHE_DIR }}"' > ~/.terraformrc
+      - name: Configure Terraform plugin cache
+        run: |
+          mkdir -pv ${{ env.TF_PLUGIN_CACHE_DIR }}
+          echo 'plugin_cache_dir = "${{ env.TF_PLUGIN_CACHE_DIR }}"' > ~/.terraformrc
 
-      # - name: Cache Terraform plugins
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: ${{ env.TF_PLUGIN_CACHE_DIR }}
-      #     key: ${{ runner.os }}-terraform-${{ vars.TF_VERSION }}
+      - name: Cache Terraform plugins
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.TF_PLUGIN_CACHE_DIR }}
+          key: ${{ runner.os }}-terraform-${{ vars.TF_VERSION }}
 
-      # - name: Terraform init - S3 backend
-      #   working-directory: ${{ env.TF_DIR }}
-      #   run: |
-      #     terraform init -reconfigure -input=false \
-      #       -backend-config="bucket=${{ vars.AWS_BACKEND_BUCKET }}" \
-      #       -backend-config="region=${{ vars.AWS_REGION }}" \
-      #       -backend-config="key=${{ vars.PROJECT }}-${{vars.APP}}/${{ vars.ENV }}/terraform.tfstate" \
-      #       -backend-config="encrypt=true"
+      - name: Terraform init - S3 backend
+        working-directory: ${{ env.TF_DIR }}
+        run: |
+          terraform init -reconfigure -input=false \
+            -backend-config="bucket=${{ vars.AWS_BACKEND_BUCKET }}" \
+            -backend-config="region=${{ vars.AWS_REGION }}" \
+            -backend-config="key=${{ vars.PROJECT }}-${{vars.APP}}/${{ vars.ENV }}/terraform.tfstate" \
+            -backend-config="encrypt=true"
 
-      # - name: Terraform Validate
-      #   working-directory: ${{ env.TF_DIR }}
-      #   run: |
-      #     terraform fmt -check -recursive -no-color
-      #     terraform validate -no-color
+      - name: Terraform Validate
+        working-directory: ${{ env.TF_DIR }}
+        run: |
+          terraform fmt -check -recursive -no-color
+          terraform validate -no-color
 
-      # - name: Terraform Plan
-      #   working-directory: ${{ env.TF_DIR }}
-      #   id: plan
-      #   run: terraform plan -out=tfplan-destroy -input=false -no-color -destroy
+      - name: Destroy - Terraform Plan
+        working-directory: ${{ env.TF_DIR }}
+        id: plan-destroy
+        run: terraform plan -out=tfplan-destroy -input=false -no-color -destroy
 
-      # - name: Show plan (JSON) - Destroy
-      #   working-directory: ${{ env.TF_DIR }}
-      #   run: terraform show -json tfplan-destroy > tfplan-destroy.json
+      - name: Destroy - Show plan (JSON)
+        working-directory: ${{ env.TF_DIR }}
+        run: terraform show -json tfplan-destroy > tfplan-destroy.json
 
-      # - name: Save plan artifacts - Destroy
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: tfplan-bundle
-      #     path: |
-      #       ${{ env.TF_DIR }}/tfplan-destroy
-      #       ${{ env.TF_DIR }}/tfplan-destroy.json
-      #     retention-days: 3
+      - name: Destroy - Save plan artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: tfplan-bundle
+          path: |
+            ${{ env.TF_DIR }}/tfplan-destroy
+            ${{ env.TF_DIR }}/tfplan-destroy.json
+          retention-days: 3
 
-      # - name: Terraform Destroy
-      #   working-directory: ${{ env.TF_DIR }}
-      #   run: terraform apply -auto-approve -no-color tfplan-destroy
+      - name: Destroy - Terraform Apply
+        working-directory: ${{ env.TF_DIR }}
+        run: terraform apply -auto-approve -no-color tfplan-destroy
 
-      # - name: Send email notification
-      #   if: always()
-      #   uses: dawidd6/action-send-mail@v3
-      #   with:
-      #     server_address: smtp.gmail.com
-      #     server_port: 465
-      #     secure: true
-      #     username: ${{ secrets.EMAIL_USERNAME }}
-      #     password: ${{ secrets.EMAIL_PASSWORD }}
-      #     subject: "${{ job.status }} - ${{ github.workflow }}: ${{ vars.PROJECT}} ${{vars.APP}} (${{vars.ENV}})"
-      #     to: ${{ secrets.EMAIL_USERNAME }}
-      #     from: ${{ secrets.EMAIL_USERNAME }}
-      #     html_body: |
-      #       <h2>GitHub Actions CI/CD Notification</h2>
-      #       <p><b>Project</b>: ${{ vars.PROJECT}}</p>
-      #       <p><b>Application</b>: ${{ vars.APP}}</p>
-      #       <p><b>Repository</b>: ${{ github.repository }}</p>
-      #       <p><b>Env</b>: ${{ vars.ENV }}</p>
-      #       <p><b>Job</b>: ${{ github.job }}</p>
-      #       <p><b>Status</b>: ${{ job.status }}</p>
-      #       <p><b>Branch</b>: ${{ github.ref }}</p>
-      #       <p><b>Workflow</b>: ${{ github.workflow }}</p>
-      #       <p><b>Commit</b>: ${{ github.sha }}</p>
-      #       <p><a href="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}">View Workflow Run</a></p>
+      - name: Send email notification
+        if: always()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          secure: true
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: "${{ job.status }} - ${{ github.workflow }}: ${{ vars.PROJECT}} ${{vars.APP}} (${{vars.ENV}})"
+          to: ${{ secrets.EMAIL_USERNAME }}
+          from: ${{ secrets.EMAIL_USERNAME }}
+          html_body: |
+            <h2>GitHub Actions CI/CD Notification</h2>
+            <p><b>Project</b>: ${{ vars.PROJECT}}</p>
+            <p><b>Application</b>: ${{ vars.APP}}</p>
+            <p><b>Repository</b>: ${{ github.repository }}</p>
+            <p><b>Env</b>: ${{ vars.ENV }}</p>
+            <p><b>Job</b>: ${{ github.job }}</p>
+            <p><b>Status</b>: ${{ job.status }}</p>
+            <p><b>Branch</b>: ${{ github.ref }}</p>
+            <p><b>Workflow</b>: ${{ github.workflow }}</p>
+            <p><b>Commit</b>: ${{ github.sha }}</p>
+            <p><a href="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}">View Workflow Run</a></p>
