--- a/.github/workflows/prod-cd-apply.yaml
+++ b/.github/workflows/prod-cd-apply.yaml
@@ -11,6 +11,10 @@ on:
       - "aws/**"
       - ".github/workflows/prod-cd-apply.yaml"
 
+  schedule:
+    # 9:00 toronto time
+    - cron: "0 14 * * *"
+
 concurrency:
   group: prod-apply-${{ github.ref_name }}
   cancel-in-progress: false # keep in-progress jobs
